lib/src/compiler/tests/testdata/errors/146.out
error[E042]: error including file
 --> ./src/compiler/tests/testdata/errors/146.in:3:1
  |
3 | include "146.in"
  | ^^^^^^^^^^^^^^^^ failed with error: File was already included.
Full include stack:
↳ <CARGO_MANIFEST_DIR>/src/compiler/tests/testdata/errors/146.in
  |